# learning_materials

./: README.MD  pyproject.toml
OOP/class_methods/: class_methods.ipynb
OOP/static_methods/: static_methods.ipynb
async_python/: main.py  pyproject.toml
async_python/chapter_2/: 1.py  2(tasks).py  3(tasks).py  Blocking_apis.py  debug_mode.py
async_python/chapter_3/: blocking_socket.py
async_python/util/: delay_functions.py
float_and_Decimal/: float_and_Decimal.ipynb
functional_programming/: generators.ipynb  iterator_and_generator.ipynb  packing_and_unpacking_operators.ipynb
loops_and_control_statements/: match_case.ipynb
multiprocessing-multithreading/: http_requests_multithreading.py  http_requests_single_thread.py
Асинхронное программирование/: intro.py  t.py
Логирование/Стандартный модуль Python logging/: Общая информация.ipynb
Объектно-ориентированное программирование/: методы __str__() и __repr__().ipynb
Объектно-ориентированное программирование/SOLID/: interface_segregation_principle.ipynb  liskov_substitution_principle.ipynb  open_closed_principle.ipynb  single_responsibility_principle.ipynb
Объектно-ориентированное программирование/class методы/: class методы.ipynb
Практические задания/Строки/: Task_1.ipynb
Строковый тип и проч./: Строки и тип bytes.ipynb
Тип данных float и класс Decimal/: float_and_Decimal.ipynb
Функциональное программирование/: decorators.ipynb  Генераторы.ipynb  Использование модуля timeit.ipynb  Итераторы и генераторы.ipynb
Циклы и управляющие конструкции/: Операторы match и case.ipynb
(+3 files in other folders)
